# source-indexer

./: .gitignore  README.md  pyproject.toml
notebook/: .env  .gitignore  procs-nbclient.ipynb  procs-nbformat.ipynb  procs-postgres-blob.ipynb  procs-postgres-create-tables.ipynb  procs-postgres-delete.ipynb  procs-postgres-insert-records.ipynb  procs-postgres-query.ipynb  procs-postgres-update.ipynb  procs-postgres.ipynb
source_indexer/: anal_sources.py
tests/: test_source_indexer.py
