[tool.poetry]
name = "source-indexer"
version = "0.1.0"
description = ""
authors = ["Samlet Wu <xiaofei.wu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.14.0"
anytree = "^2.8.0"
marisa-trie = "^0.7.5"
msgpack = "^1.0.0"
jieba = "^0.42.1"
whoosh = "^2.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
